# actitime-rest-client

./: Cargo.toml
src/: client_context.rs  date_formatter.rs  errors.rs  lib.rs
src/endpoint/tasks/: get_tasks.rs
src/endpoint/users/: get_users_me.rs  get_users_schedule.rs  mod.rs
src/payload/: allowed_actions.rs  api_error.rs  batch_request_item.rs  customer.rs  enums.rs  leave_type.rs  mod.rs  pagination_listing.rs  payload_trait.rs  project.rs  schedule.rs  task.rs  task_list.rs  task_with_allowed_actions.rs  type_of_work.rs  user.rs  user_with_allowed_actions.rs  user_with_password.rs  workflow_status.rs
src/routes/: batch.rs  leave_types.rs  mod.rs  route.rs  tasks.rs  users.rs
