[package]
name = "actitime-rest-client"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"
